# mini-xmpp

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  README.md
client/src/: conn.rs  main.rs  session.rs
parsers/: Cargo.toml  README.md
parsers/src/: constants.rs  empty.rs  jid.rs  lib.rs  utils.rs
parsers/src/stanza/: iq.rs  mod.rs
parsers/src/stream/: auth.rs  features.rs  initial.rs  mod.rs
scripts/socket/: client.Dockerfile  client.py  server.Dockerfile  server.py
server/: Cargo.toml  README.md
server/migrations/: 20240114231827_add-users.sql
server/src/: conn.rs  main.rs  session.rs  state.rs
server/src/handlers/: iq.rs  message.rs  mod.rs  presence.rs
src/: lib.rs  main.rs  stream.rs  xmpp.rs
src/xmpp/: collect.rs  handshake.rs  helpers.rs  jid.rs  messaging.rs  mod.rs  serialize.rs
xml/: Cargo.toml  README.md
xml/src/: from_xml.rs  jid.rs  lib.rs  stream.rs  utils.rs
xml/src/stanza/: iq.rs  message.rs  mod.rs  presence.rs
xml/src/stream/: auth.rs  features.rs  initial.rs  mod.rs
