[package]
name = "mini-jabber"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"

[[bin]]
name = "server"

[dependencies]
# Serialization
serde = "1.*"
quick-xml = {version = "0.31.0", features = ["serialize"]}
url = "2.5.0"

# Errors
color-eyre = "0.6.*"

# Async
tokio = { version = "1.34.*", features = ["full"] }
tokio-tungstenite = "0.20.*"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3.28"
async-trait = "0.1.74"
